# TMAU-2025

trunk/as06521/task_02/: README.md
trunk/as06521/task_02/src/: CMakeLists.txt  main.cpp  temperature_model.cpp  temperature_model.h
trunk/as06521/task_02/test/: temperature_model_test.cpp
